Address review feedback: improve Tags API clarity and compatibility
- Rename of(String...) to ofStringPairs(String...) to avoid ambiguity
  with of(String, Object) overload
- Widen fromMap(Map<String, String>) to fromMap(Map<String, ?>) for
  flexibility
- Remove toMap() in favor of getTagsMap() as the single map accessor
- Refactor getTagsMap() to use Map.ofEntries for compact unmodifiable map
- Simplify equals() to use Arrays.equals instead of manual loop
- Fix TestInMemoryHistogram to use Map instead of HashMap, avoiding
  ClassCastException with new getTagsMap() return type
- Update tests to reflect renamed methods and removed toMap()

Signed-off-by: Sam Akrah <sakrah@uber.com>